<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.witiw.go4amatch.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btSearch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="70dp"
            android:text="@string/search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/tvCriterion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/criterion"
                android:textColor="@color/text_color"
                android:textSize="@dimen/title_font_size"
                android:textStyle="bold"
                android:shadowColor="#7000"
                android:shadowDx="12"
                android:shadowDy="12"
                android:shadowRadius="8"
                />

            <TextView
                android:id="@+id/tvScale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/scale"
                android:textColor="@color/text_color"
                android:textSize="@dimen/title_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="4"
                android:gravity="bottom|right"
                android:text="Niesistotny"
                android:textSize="@dimen/scale_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="bottom|right"
                android:text="Bardzo ważne"
                android:textSize="@dimen/scale_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/criterion_height"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/tvBudget"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/budget"
                android:textColor="@color/text_color"
                android:textSize="@dimen/preferences_font_size" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/sbBudget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginRight="10dp"
                android:layout_weight="@integer/weight_seek_bar"
                app:dsb_allowTrackClickToDrag="false"
                app:dsb_indicatorColor="@color/indicator_color"
                app:dsb_indicatorFormatter="%d"
                app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
                app:dsb_max="@integer/bar_max"
                app:dsb_min="@integer/bar_min"
                app:dsb_progressColor="@color/progress_color"
                app:dsb_rippleColor="@color/ripple_color"
                app:dsb_value="@integer/bar_start" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/criterion_height"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/tvAttractiveness"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/attractiveness"
                android:textColor="@color/text_color"
                android:textSize="@dimen/preferences_font_size" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/sbAttractiveness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginRight="10dp"
                android:layout_weight="@integer/weight_seek_bar"
                app:dsb_allowTrackClickToDrag="false"
                app:dsb_indicatorColor="@color/indicator_color"
                app:dsb_indicatorFormatter="%d"
                app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
                app:dsb_max="@integer/bar_max"
                app:dsb_min="@integer/bar_min"
                app:dsb_progressColor="@color/progress_color"
                app:dsb_rippleColor="@color/ripple_color"
                app:dsb_value="@integer/bar_start" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/criterion_height"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/tvligueType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/ligue_type"
                android:textColor="@color/text_color"
                android:textSize="@dimen/preferences_font_size" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/sbLigueType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginRight="10dp"
                android:layout_weight="@integer/weight_seek_bar"
                app:dsb_allowTrackClickToDrag="false"
                app:dsb_indicatorColor="@color/indicator_color"
                app:dsb_indicatorFormatter="%d"
                app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
                app:dsb_max="@integer/bar_max"
                app:dsb_min="@integer/bar_min"
                app:dsb_progressColor="@color/progress_color"
                app:dsb_rippleColor="@color/ripple_color"
                app:dsb_value="@integer/bar_start" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/criterion_height"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/tvAreaAttractiveness"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/area_attractiveness"
                android:textColor="@color/text_color"
                android:textSize="@dimen/preferences_font_size" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/sbAreaAttractiveness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginRight="10dp"
                android:layout_weight="@integer/weight_seek_bar"
                app:dsb_allowTrackClickToDrag="false"
                app:dsb_indicatorColor="@color/indicator_color"
                app:dsb_indicatorFormatter="%d"
                app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
                app:dsb_max="@integer/bar_max"
                app:dsb_min="@integer/bar_min"
                app:dsb_progressColor="@color/progress_color"
                app:dsb_rippleColor="@color/ripple_color"
                app:dsb_value="@integer/bar_start" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/criterion_height"
            android:layout_margin="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/distance"
                android:textColor="@color/text_color"
                android:textSize="@dimen/preferences_font_size" />


            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/sbDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginRight="10dp"
                android:layout_weight="@integer/weight_seek_bar"
                app:dsb_allowTrackClickToDrag="false"
                app:dsb_indicatorColor="@color/indicator_color"
                app:dsb_indicatorFormatter="%d"
                app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
                app:dsb_max="@integer/bar_max"
                app:dsb_min="@integer/bar_min"
                app:dsb_progressColor="@color/progress_color"
                app:dsb_rippleColor="@color/ripple_color"
                app:dsb_value="@integer/bar_start" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>